--- a/CanibaApplicationideia desing/public_html/index.html
+++ b/CanibaApplicationideia desing/public_html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <meta charset="utf-8">
+        <meta charset="">
         <title>TheEvent - Bootstrap Event Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
@@ -54,15 +54,15 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class="menu-active"><a href="#intro">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#speakers">Speakers</a></li>
-                        <li><a href="#schedule">Schedule</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#speakers">Palestrantes</a></li>
+                        <li><a href="#schedule">Endereço</a></li>
                         <li><a href="#venue">Venue</a></li>
                         <li><a href="#hotels">Hotels</a></li>
-                        <li><a href="#gallery">Gallery</a></li>
-                        <li><a href="#supporters">Sponsors</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
+                        <li><a href="#gallery">Galeria</a></li>
+                        <li><a href="#supporters">Sócios</a></li>
+                        <li><a href="#contact">Contatos</a></li>
+                        <li class="buy-tickets"><a href="#buy-tickets">Ingressos</a></li>
                     </ul>
                 </nav><!-- #nav-menu-container -->
             </div>
@@ -78,10 +78,10 @@
                            <img src="img/img.jpg" alt="intro-bg"  title="The Annual"/>
                         </div>
                         <div class="carousel-item">
-                             <img src="img/img2.jpg" alt="about-bg"/>
+                             <img src="img/img4.jpg" alt="about-bg"/>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/img3.jpg" alt="foto3"/>
+                            <img src="img/img5.jpg" alt="foto3"/>
                         </div>
                     </div>        
                 </div>           
@@ -96,18 +96,18 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
-                            <h2>About The Event</h2>
-                            <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-                                accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-                                est ut optio sequi unde.</p>
+                            <h2>Sobre Salão do automóvel</h2>
+                            <p>É um evento que apresenta as maiores novidades do mundo automotivo, apresentando desde modelos de carros focados para o diaa a dia trazendo inovações, 
+							carros conceitos, esportivos e até os mais potentes hiper esportivos da atualidade para quem gosta do mundo da alta velocidade</p>
                         </div>
                         <div class="col-lg-3">
-                            <h3>Where</h3>
-                            <p>Downtown Conference Center, New York</p>
+                            <h3>Onde será</h3>
+                            <p>Rodovia dos Imigrantes, Km 1,5
+							Água Funda | São Paulo - SP - Brasil</p>
                         </div>
                         <div class="col-lg-3">
-                            <h3>When</h3>
-                            <p>Monday to Wednesday<br>10-12 December</p>
+                            <h3>Quando será</h3>
+                            <p>12 a 22 de Nov | 2020</p>
                         </div>
                     </div>
                 </div>
@@ -963,8 +963,8 @@
                 <div class="container">
 
                     <div class="section-header">
-                        <h2>Contact Us</h2>
-                        <p>Nihil officia ut sint molestiae tenetur.</p>
+                        <h2>Fale Conosco</h2>
+                        <p>Nos contate por meio das seguintes opções.</p>
                     </div>
 
                     <div class="row contact-info">
@@ -972,16 +972,16 @@
                         <div class="col-md-4">
                             <div class="contact-address">
                                 <i class="ion-ios-location-outline"></i>
-                                <h3>Address</h3>
-                                <address>A108 Adam Street, NY 535022, USA</address>
+                                <h3>Endereço</h3>
+                                <address>Rua topázio, n°555 - Cotia-SP </address>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="contact-phone">
                                 <i class="ion-ios-telephone-outline"></i>
-                                <h3>Phone Number</h3>
-                                <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+                                <h3>Telefone</h3>
+                                <p><a href="tel:+155895548855">+55 (11) 4002 - 8922</a></p>
                             </div>
                         </div>
 
@@ -989,35 +989,35 @@
                             <div class="contact-email">
                                 <i class="ion-ios-email-outline"></i>
                                 <h3>Email</h3>
-                                <p><a href="mailto:info@example.com">info@example.com</a></p>
+                                <p><a href="mailto:info@example.com">caniba@gmail.com</a></p>
                             </div>
                         </div>
 
                     </div>
 
                     <div class="form">
-                        <div id="sendmessage">Your message has been sent. Thank you!</div>
+                        <div id="sendmessage">Sua mensagem foi enviada!</div>
                         <div id="errormessage"></div>
                         <form action="" method="post" role="form" class="contactForm">
                             <div class="form-row">
                                 <div class="form-group col-md-6">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Nome" data-rule="minlen:4" data-msg="Mínimo 4 caracteres" />
                                     <div class="validation"></div>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Email inválido" />
                                     <div class="validation"></div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Mínimo 8 caracteres" />
                                 <div class="validation"></div>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Por favor, nos escreva algo!" placeholder="Mensagem"></textarea>
                                 <div class="validation"></div>
                             </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="text-center"><button type="submit">Enviar</button></div>
                         </form>
                     </div>
 
@@ -1037,37 +1037,26 @@
 
                         <div class="col-lg-3 col-md-6 footer-info">
                             <img src="img/logo.png" alt="TheEvenet">
-                            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
+                            <p>Somos uma empresa que anuncia,<br> publica e faz intermédios para<br> eventos como vender ingressos,<br> apresentar opções de hospedagem<br> em hotéis, para trazer aos nossos<br> clientes o máximo de praticidade possível</p>
                         </div>
 
                         <div class="col-lg-3 col-md-6 footer-links">
-                            <h4>Useful Links</h4>
+                            <h4>Links</h4>
                             <ul>
                                 <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6 footer-links">
-                            <h4>Useful Links</h4>
-                            <ul>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-                                <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
+                                <li><i class="fa fa-angle-right"></i> <a href="#">Quem somos</a></li>
+                                <li><i class="fa fa-angle-right"></i> <a href="#">Serviços</a></li>
+                                <li><i class="fa fa-angle-right"></i> <a href="#">Termos</a></li>
+                                <li><i class="fa fa-angle-right"></i> <a href="#">Política de privacidade</a></li>
                             </ul>
                         </div>
 
                         <div class="col-lg-3 col-md-6 footer-contact">
-                            <h4>Contact Us</h4>
+                            <h4>Fale conosco</h4>
                             <p>
-                                A108 Adam Street <br>
-                                New York, NY 535022<br>
-                                United States <br>
+                                <strong>Endereço:</strong> Rua topázio N°555 <br>
+                                Cotia=SP<br>
+                                Brasil <br>
                                 <strong>Phone:</strong> +1 5589 55488 55<br>
                                 <strong>Email:</strong> info@example.com<br>
                             </p>
@@ -1097,7 +1086,7 @@
                       Licensing information: https://bootstrapmade.com/license/
                       Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
                     -->
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                    Designed by <a href="https://bootstrapmade.com/">Caniba</a>
                 </div>
             </div>
         </footer><!-- #footer -->
