--- a/CanibaApplicationideia desing/public_html/index.html
+++ b/CanibaApplicationideia desing/public_html/index.html
@@ -119,8 +119,8 @@
             <section id="speakers" class="wow fadeInUp">
                 <div class="container">
                     <div class="section-header">
-                        <h2>Event Speakers</h2>
-                        <p>Here are some of our speakers</p>
+                        <h2>Outros destaques</h2>
+                        <p>´Próximos eventos em breve</p>
                     </div>
 
                     <div class="row">
@@ -128,8 +128,8 @@
                             <div class="speaker">
                                 <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
                                 <div class="details">
-                                    <h3><a href="speaker-details.html">Brenden Legros</a></h3>
-                                    <p>Quas alias incidunt</p>
+                                    <h3><a href="speaker-details.html">Ressaca Friends</a></h3>
+                                    <p>Evento de cultura japonesa</p>
                                     <div class="social">
                                         <a href=""><i class="fa fa-twitter"></i></a>
                                         <a href=""><i class="fa fa-facebook"></i></a>
@@ -143,8 +143,8 @@
                             <div class="speaker">
                                 <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
                                 <div class="details">
-                                    <h3><a href="speaker-details.html">Hubert Hirthe</a></h3>
-                                    <p>Consequuntur odio aut</p>
+                                    <h3><a href="speaker-details.html">Stand Up Comedy</a></h3>
+                                    <p>Venha rir você também!</p>
                                     <div class="social">
                                         <a href=""><i class="fa fa-twitter"></i></a>
                                         <a href=""><i class="fa fa-facebook"></i></a>
@@ -158,8 +158,8 @@
                             <div class="speaker">
                                 <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
                                 <div class="details">
-                                    <h3><a href="speaker-details.html">Cole Emmerich</a></h3>
-                                    <p>Fugiat laborum et</p>
+                                    <h3><a href="speaker-details.html">GP interlagos</a></h3>
+                                    <p>Alta velocidade em carros de F1!</p>
                                     <div class="social">
                                         <a href=""><i class="fa fa-twitter"></i></a>
                                         <a href=""><i class="fa fa-facebook"></i></a>
@@ -169,51 +169,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid">
-                                <div class="details">
-                                    <h3><a href="speaker-details.html">Jack Christiansen</a></h3>
-                                    <p>Debitis iure vero</p>
-                                    <div class="social">
-                                        <a href=""><i class="fa fa-twitter"></i></a>
-                                        <a href=""><i class="fa fa-facebook"></i></a>
-                                        <a href=""><i class="fa fa-google-plus"></i></a>
-                                        <a href=""><i class="fa fa-linkedin"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
-                                <div class="details">
-                                    <h3><a href="speaker-details.html">Alejandrin Littel</a></h3>
-                                    <p>Qui molestiae natus</p>
-                                    <div class="social">
-                                        <a href=""><i class="fa fa-twitter"></i></a>
-                                        <a href=""><i class="fa fa-facebook"></i></a>
-                                        <a href=""><i class="fa fa-google-plus"></i></a>
-                                        <a href=""><i class="fa fa-linkedin"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
-                                <div class="details">
-                                    <h3><a href="speaker-details.html">Willow Trantow</a></h3>
-                                    <p>Non autem dicta</p>
-                                    <div class="social">
-                                        <a href=""><i class="fa fa-twitter"></i></a>
-                                        <a href=""><i class="fa fa-facebook"></i></a>
-                                        <a href=""><i class="fa fa-google-plus"></i></a>
-                                        <a href=""><i class="fa fa-linkedin"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
 
@@ -225,8 +181,8 @@
             <section id="schedule" class="section-with-bg">
                 <div class="container wow fadeInUp">
                     <div class="section-header">
-                        <h2>Event Schedule</h2>
-                        <p>Here is our event schedule</p>
+                        <h2>Calendário</h2>
+                        <p>Aqui está nosso cronograma dos eventos</p>
                     </div>
 
                     <ul class="nav nav-tabs" role="tablist">
@@ -752,19 +708,19 @@
                             <ul id="faq-list">
 
                                 <li>
-                                    <a data-toggle="collapse" class="collapsed" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="fa fa-minus-circle"></i></a>
+                                    <a data-toggle="collapse" class="collapsed" href="#faq1">Quanto tempo leva para enviar o ingresso (digital)? <i class="fa fa-minus-circle"></i></a>
                                     <div id="faq1" class="collapse" data-parent="#faq-list">
                                         <p>
-                                            Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                                            Após a confirmação do pagamento,cerca de 60 a 180 minutos (de 1 a 3 horas), caso esteja demorando muito, por favor, nos contate usando o link abaixo.<a href="#contact">Contatos.</a>
                                         </p>
                                     </div>
                                 </li>
 
                                 <li>
-                                    <a data-toggle="collapse" href="#faq2" class="collapsed">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="fa fa-minus-circle"></i></a>
+                                    <a data-toggle="collapse" href="#faq2" class="collapsed">Perdi meu ingresso ou não consigo acessar, e agora? <i class="fa fa-minus-circle"></i></a>
                                     <div id="faq2" class="collapse" data-parent="#faq-list">
                                         <p>
-                                            Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                                            Tenha consigo as informações utilizadas na hora da compra tais como, cpf, comprovante de pagamento, para pagamentos com cartão, N° do cartão, para boleto, o documento em si. o ingresso será localizado e invalidado caso os dados fornecidos forem validados. Segue abaixo o link para a solicitação de reenvio.<a href="#contact">Contatos</a>
                                         </p>
                                     </div>
                                 </li>
