--- a/CanibaApplicationideia desing/public_html/event2.html
+++ b/CanibaApplicationideia desing/public_html/event2.html
@@ -51,15 +51,15 @@
 
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li class="menu-active"><a href="#intro">Home</a></li>
-                        <li><a href="#about">Sobre</a></li>
-                        <li><a href="#speakers">Destaques</a></li>
-                        <li><a href="#schedule">Calendário</a></li>
+                      <li class="menu-active"><a href="#index.html">Home</a></li>
+                        <li><a href="index.html#about">Sobre</a></li>
+                        <li><a href="index.html#speakers">Destaques</a></li>
+                        <li><a href="index.html#schedule">Calendário</a></li>
                         <li><a href="#venue">Endereço</a></li>
-                        <li><a href="#hotels">Hotéis</a></li>
-                        <li><a href="#gallery">Galeria</a></li>
-                        <li><a href="#supporters">Parcerias</a></li>
-                        <li><a href="#contact">Contatos</a></li>
+                        <li><a href="index.html#hotels">Hotéis</a></li>
+                        <li><a href="index.html#gallery">Galeria</a></li>
+                        <li><a href="index.html#supporters">Parcerias</a></li>
+                        <li><a href="index.html#contact">Contatos</a></li>
                         <li class="buy-tickets"><a href="#buy-tickets">Ingressos</a></li>
                     </ul>
                 </nav><!-- #nav-menu-container -->
@@ -198,7 +198,7 @@
                                     </div>
                                     <div class="form-group">
                                         <select id="ticket-type" name="ticket-type" class="form-control" >
-                                            <option value="">-- Select Your Ticket Type --</option>
+                                            <option value="">-- Selecione seu ingresso --</option>
                                             <option value="standard-access">Inteira R$70,00</option>
                                             <option value="pro-access">Ingresso VIP R$200,00</option>
                                             <option value="premium-access">Ingresso Premium R$800,00</option>
@@ -262,8 +262,8 @@
                                 <strong>Endereço:</strong> Rua topázio Nº555 <br>
                                 Cotia=SP<br>
                                 Brasil <br>
-                                <strong>Phone:</strong> +1 5589 55488 55<br>
-                                <strong>Email:</strong> info@example.com<br>
+                                <strong>Phone:</strong> +55 (11) 4002-8922<br>
+                                <strong>Email:</strong> caniba@gmail.com<br>
                             </p>
 
                             <div class="social-links">
@@ -291,7 +291,7 @@
                       Licensing information: https://bootstrapmade.com/license/
                       Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
                     -->
-                    Designed by <a href="https://bootstrapmade.com/">Caniba</a>
+                    Designed by <a href="">Caniba</a>
                 </div>
             </div>
         </footer><!-- #footer -->
