--- a/CanibaApplicationideia desing/public_html/event3.html
+++ b/CanibaApplicationideia desing/public_html/event3.html
@@ -52,15 +52,15 @@
 
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li class="menu-active"><a href="#intro">Home</a></li>
-                        <li><a href="#about">Sobre</a></li>
-                        <li><a href="#speakers">Destaques</a></li>
-                        <li><a href="#schedule">Calendário</a></li>
+                        <li class="menu-active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html#about">Sobre</a></li>
+                        <li><a href="index.html#speakers">Destaques</a></li>
+                        <li><a href="index.html#schedule">Calendário</a></li>
                         <li><a href="#venue">Endereço</a></li>
-                        <li><a href="#hotels">Hotéis</a></li>
-                        <li><a href="#gallery">Galeria</a></li>
-                        <li><a href="#supporters">Parcerias</a></li>
-                        <li><a href="#contact">Contatos</a></li>
+                        <li><a href="index.html#hotels">Hotéis</a></li>
+                        <li><a href="index.html#gallery">Galeria</a></li>
+                        <li><a href="index.html#supporters">Parcerias</a></li>
+                        <li><a href="index.html#contact">Contatos</a></li>
                         <li class="buy-tickets"><a href="#buy-tickets">Ingressos</a></li>
                     </ul>
                 </nav><!-- #nav-menu-container -->
@@ -114,13 +114,13 @@
                             <div class="card mb-5 mb-lg-0">
                                 <div class="card-body">
                                     <h5 class="card-title text-muted text-uppercase text-center">Ingresso</h5>
-                                    <h6 class="card-price text-center">Treino Sexta</h6>
+                                    <h6 class="card-price text-center">Treino Sexta-Feira</h6>
                                     <hr>
                                     Veja no link a seguir, as arquibancadas disponíveis.
                                     <hr>
                                     <div class="text-center">
                                         <a href="https://www.gpbrasil.com.br/pt-br/ingressos?tipo=arquibancadas">
-                                        <button type="button" class="btn" data-toggle="modal" data-target="#buy-ticket-modal" data-ticket-type="premium-access" >Comprar</button></a>
+                                        <button type="button" class="btn" data-toggle="modal" data-target="#buy-ticket-modal" data-ticket-type="premium-access" >Ingressos</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -163,79 +163,7 @@
 
                 </div>
 
-                <!-- Modal Order Form -->
-                <div id="buy-ticket-modal" class="modal fade">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title">Comprar</h4>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <form method="POST" action="#">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" name="your-name" placeholder="Nome Completo">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" name="your-email" placeholder="Email">
-                                    </div>
-                                    <div class="form-group">
-                                        <select id="ticket-type" name="ticket-type" class="form-control" >
-                                            <option value="">-- Select Your Ticket Type --</option>
-                                            <option value="standard-access">Inteira R$70,00</option>
-                                            <option value="pro-access">Ingresso VIP R$200,00</option>
-                                            <option value="premium-access">Ingresso Premium R$800,00</option>
-                                        </select>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" class="btn">Ingressos</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div><!-- /.modal-content -->
-                    </div><!-- /.modal-dialog -->
-                </div><!-- /.modal -->
-
-            </section>
-                </div>
-
-                <!-- Modal Order Form -->
-                <div id="buy-ticket-modal" class="modal fade">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title">Comprar</h4>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <form method="POST" action="#">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" name="your-name" placeholder="Your Name">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" name="your-email" placeholder="Your Email">
-                                    </div>
-                                    <div class="form-group">
-                                        <select id="ticket-type" name="ticket-type" class="form-control" >
-                                            <option value="">-- Select Your Ticket Type --</option>
-                                            <option value="standard-access">Standard Access</option>
-                                            <option value="pro-access">Pro Access</option>
-                                            <option value="premium-access">Premium Access</option>
-                                        </select>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" class="btn">Comprar</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div><!-- /.modal-content -->
-                    </div><!-- /.modal-dialog -->
-                </div><!-- /.modal -->
-
+                
             </section>
 
             <section id="venue" class="wow fadeInUp">
@@ -314,7 +242,7 @@
                       Licensing information: https://bootstrapmade.com/license/
                       Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
                     -->
-                    Designed by <a href="https://bootstrapmade.com/">Caniba</a>
+                    Designed by <a href="">Caniba</a>
                 </div>
             </div>
         </footer><!-- #footer -->
