--- a/CanibaApplicationideia desing/public_html/index.html
+++ b/CanibaApplicationideia desing/public_html/index.html
@@ -562,7 +562,7 @@
                                     <a data-toggle="collapse" class="collapsed" href="#faq1">Quanto tempo leva para enviar o ingresso (digital)? <i class="fa fa-minus-circle"></i></a>
                                     <div id="faq1" class="collapse" data-parent="#faq-list">
                                         <p>
-                                            Após a confirmação do pagamento,cerca de 60 a 180 minutos (de 1 a 3 horas), caso esteja demorando muito, por favor, nos contate usando o link abaixo.<a href="#contact">Contatos.</a>
+                                            Após a confirmação do pagamento, cerca de 60 a 180 minutos (de 1 a 3 horas). Caso esteja demorando muito, por favor, nos contate usando o link abaixo.<a href="#contact">Contatos.</a>
                                         </p>
                                     </div>
                                 </li>
@@ -632,10 +632,10 @@
                     <form method="POST" action="#">
                         <div class="form-row justify-content-center">
                             <div class="col-auto">
-                                <input type="text" class="form-control" placeholder="Enter your Email">
+                                <input type="text" class="form-control" placeholder="Digite seu Email">
                             </div>
                             <div class="col-auto">
-                                <button type="submit">Subscribe</button>
+                                <button type="submit">Se inscreva!</button>
                             </div>
                         </div>
                     </form>
@@ -874,8 +874,8 @@
                                 <strong>Endereço:</strong> Rua topázio Nº555 <br>
                                 Cotia=SP<br>
                                 Brasil <br>
-                                <strong>Phone:</strong> +1 5589 55488 55<br>
-                                <strong>Email:</strong> info@example.com<br>
+                                <strong>Phone:</strong> +55 (11) 4002-8922<br>
+                                <strong>Email:</strong> caniba@gmail.com<br>
                             </p>                          
 
                         </div>
@@ -895,7 +895,7 @@
                       Licensing information: https://bootstrapmade.com/license/
                       Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
                     -->
-                    Designed by <a href="https://bootstrapmade.com/">Caniba</a>
+                    Designed by <a href="">Caniba</a>
                 </div>
             </div>
         </footer><!-- #footer -->
